Chart encapsulated within a container-fluid notes section added

--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top 500 North West Businesses 2022</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+    <div class="container-fluid">
+        <div class="chart" id="chart"></div>
+    </div>
+    <div class="notes-container">
+        <div class="row">
+            <p class="notes">NOTES;<br><br>This year's research ranks businesses in the North West by a combination of turnover and
+                profit.<br>The process starts by ranking 1,000 companies by turnover and then ranking the same 1,000
+                companies by pre-tax profit.<br> The two rankings are then averaged to arrive at the top companies</p>
+        </div>
+    </div>
 
-<div class="chart" id="chart"></div>
-
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-<script src="./assets/js/data.js" type="module"></script>
-<script src="./assets/js/script.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="./assets/js/data.js" type="module"></script>
+    <script src="./assets/js/script.js" type="module"></script>
 
 </body>
 
